[package]
name = "hello_rust_gem"
version = "0.1.0"
authors = ["irxground <irxnjhtchlnrw@gmail.com>"]
edition = "2018"
description = "a Ruby native extension using Rust with minimal dependencies"
homepage = "https://github.com/irxground/hello_rust_gem"
repository = "https://github.com/irxground/hello_rust_gem"
license = "MIT"

[lib]
crate-type = ["cdylib"]
